2005-03-19  Pavel Roskin  <proski@gnu.org>

	* acinclude.m4 (MC_WITH_SLANG): Reorder checks.  Move termcap
	checks ...
	(MC_SLANG_TERMCAP): ... here.
	(MC_SLANG_PRIVATE): Check if private functions are available.
	It's not the case on Debian unstable.

2005-03-19  Pavel S. Shirshov  <me@pavelsh.pp.ru>

	* syntax/idl.syntax: Add syntax file for the CORBA idl.
	From Ian Zagorskih <ianzag@megasignal.com>
	* syntax/lua.syntax: Add syntax file for the LUA programming language.
	From Mike Gorchak  <mike@malva.ua>
	* syntax/Syntax: Add syntax file for CORBA idl and lua.
	* syntax/Makefile.am: Likewise.
	* mc.qpg.in: Likewise.
	* NEWS: Likewise.

2005-03-19  Pavel Roskin  <proski@gnu.org>

	* acinclude.m4 (MC_WITH_SLANG): Define HAVE_SYSTEM_SLANG after
	all fallbacks so it shows whether we are using system S-Lang.
	* configure.ac: Remove USE_INCLUDED_SLANG, since it's now fully
	dependent on HAVE_SLANG and HAVE_SYSTEM_SLANG.
	* src/myslang.h: Likewise.

2005-03-18  Mike Gorchak  <mike@malva.ua>

	* syntax/assembler.syntax: Add syntax file for the x86 assembler.
	* syntax/povray.syntax: Add syntax file for the POVRay.
	* syntax/Syntax: Add syntax file for x86 assembler and POVRay.
	* syntax/Makefile.am: Likewise.
	* mc.qpg.in: Likewise.
	* NEWS: Likewise.

2005-03-14  Leonard den Ottolander  <leonard * den ottolander nl>

	* syntax/diff.syntax: Changed default color from gray, which was
	quite unreadable, to a bright yellow.

2005-03-10  Roland Illig  <roland.illig@gmx.de>

	* autogen.sh: Made the gettext version check more portable. The
	actual sed command is unchanged.

2005-02-26  Miguel de Icaza  <miguel@novell.com>

	* doc/mc.1.in: Replace M-char with Alt-char everywhere, which is
	simpler to understand.

2005-01-29  Miguel de Icaza  <miguel@novell.com>

	* configure.ac: Check for getgrouplist API call.

2005-02-07  Roland Illig  <roland.illig@gmx.de>

	* NEWS: Added the changes between mc-4.6.1-pre3 and now.

2005-01-27  Roland Illig  <roland.illig@gmx.de>
